# SampleTrace

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: benchling_permissions.md  config.md  credentials.md  threat_model.md
examples/: cookbook.md  walkthrough.ipynb
src/sampletrace/: __init__.py  benchling_client.py  cli.py  credentials.py  dashboard.py  reconciler.py  report.py  schemas.py
src/sampletrace/_mock_data/: __init__.py  benchling_entities.json
src/sampletrace/parsers/: __init__.py  count_matrix.py  fastq_header.py  illumina_sample_sheet.py
tests/: conftest.py  test_benchling_client.py  test_cli.py  test_cli_credentials.py  test_credentials.py  test_parsers_count_matrix.py  test_parsers_fastq.py  test_parsers_sample_sheet.py  test_reconciler.py  test_report.py  test_schemas.py
tests/fixtures/: SampleSheet_v1.csv  SampleSheet_v2.csv  bch_mock.yml  benchling_with_drift.json  counts.tsv
