[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "sampletrace"
version = "0.1.0"
description = "Benchling-linked NGS metadata reconciliation: catch sample swaps and metadata drift before alignment."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [
    { name = "SampleTrace Contributors" },
]
keywords = ["bioinformatics", "ngs", "benchling", "sample-tracking", "reconciliation", "lims"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "click>=8.1",
    "pandas>=2.1",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rapidfuzz>=3.6",
    "jinja2>=3.1",
    "rich>=13.7",
]

[project.optional-dependencies]
benchling = [
    "benchling-sdk>=1.15",
]
dashboard = [
    "streamlit>=1.31",
    "plotly>=5.18",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.3",
    "mypy>=1.8",
    "pandas-stubs",
    "types-PyYAML",
]
all = [
    "sampletrace[benchling,dashboard,dev]",
]

[project.scripts]
sampletrace = "sampletrace.cli:main"

[project.urls]
Homepage = "https://github.com/yourorg/SampleTrace"
Issues = "https://github.com/yourorg/SampleTrace/issues"
Documentation = "https://github.com/yourorg/SampleTrace/blob/main/docs/"

[tool.hatch.build.targets.wheel]
packages = ["src/sampletrace"]

[tool.hatch.build.targets.wheel.force-include]
"src/sampletrace/_mock_data" = "sampletrace/_mock_data"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",           # ruff-specific
    "C4",            # comprehensions
    "PIE",           # misc
]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function calls in default args (click uses these)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
files = ["src/sampletrace"]

[[tool.mypy.overrides]]
module = [
    "benchling_sdk.*",
    "benchling_api_client.*",
    "rapidfuzz.*",
    "streamlit.*",
    "plotly.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests that require external services (skipped by default in CI)",
]

[tool.coverage.run]
source = ["src/sampletrace"]
branch = true
omit = [
    "src/sampletrace/dashboard.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
